# TestR

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/alignments/: BamAlignmentReader.cpp  BamAlignmentReader.h  IAlignment.h  IAlignmentReader.h
core/containers/: IKmerSet.h  KmerHash.hpp  KmerSet.hpp  KmerSetManager.hpp  MintomicKmerSet.hpp  SparseKmerSet.hpp
core/hashers/: KmerHash.hpp  PartialHash.hpp
core/parsers/: AlignmentParser.hpp
core/utils/: Noncopyable.hpp  Parameters.cpp  Parameters.h  ThreadPool.hpp  Types.h
tests/: AlignmentParserTests.hpp  BamAlignmentReaderTests.hpp  CMakeLists.txt  SparseKmerSetTests.hpp  gtest_main.cpp
tests/config/: DataPaths.h  DataPaths.h.in
tools/: CMakeLists.txt  rufus.cpp
